--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "magento-ar-shopping",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://revanth0212.github.io/magento-ar-shopping",
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aframe": "^0.9.2",
     "aframe-react": "^4.4.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-aframe": "^1.0.0",
     "react-dom": "^16.12.0",
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
