--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.12.0",
     "react-aframe": "^1.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-webcam": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
